Fix for photos not displaying

--- a/recipes/butter-chicken.html
+++ b/recipes/butter-chicken.html
@@ -3,7 +3,7 @@
 
 <body>
     <h1>Butter Chicken</h1>
-    <img src="../images/butter-chicken.jpeg" alt="Butter Chicken">
+    <img src="../images/butter-chicken.png" alt="Butter Chicken">
     <h3>Indian Butter Chicken Masala Recipe</h3>
     <p>
         Delicious Indian butter chicken at home. It is so flavorful and easy to prepare. 
