--- a/recipes/texas-pulled-pork.html
+++ b/recipes/texas-pulled-pork.html
@@ -6,7 +6,7 @@
 
     <body>
        <h1>Slow Cooker Texas Pulled Pork</h1>
-       <img src="../images/pulled-pork.jpeg" alt="Slow Cooker Pulled Pork">
+       <img src="../images/pulled-pork.png" alt="Slow Cooker Pulled Pork">
 
        <h3>Slow Cooker Pulled Pork Recipe</h3>
        
