--- a/recipes/ultimate-fruit-smoothie.html
+++ b/recipes/ultimate-fruit-smoothie.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Ultimate Fruit Smoothie</h1>
-    <img src="../images/fruit-smoothie.jpeg" alt="Fruit Smoothie">
+    <img src="../images/fruit-smoothie.png" alt="Fruit Smoothie">
 
     <h3>Ultimate Fruit Smoothie</h3>
 
